# ossidata

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FLASH_HANGING_ISSUE.md  README.md  flash-background.sh  flash-external.sh  flash-impl.sh  flash-linux.sh  flash-macos.sh  flash-windows.bat  flash-wrapper.sh  flash.sh
.github/workflows/: ci.yml
boards/arduino-uno/: Cargo.toml  Ravedude.toml  avr-none.json  build.rs
boards/arduino-uno/.cargo/: config.toml
boards/arduino-uno/avr-specs/: avr-atmega328p.json
boards/arduino-uno/src/: adc.rs  constants.rs  eeprom.rs  embedded_hal_impl.rs  gpio.rs  gpio_impl.rs  i2c.rs  interrupt.rs  lcd.rs  lib.rs  memory.rs  pcint.rs  pin.rs  ports.rs  progmem.rs  pulse.rs  pwm.rs  rtc.rs  serial.rs  servo.rs  shift.rs  sleep.rs  software_serial.rs  spi.rs  string.rs  time.rs  timer.rs  tone.rs  utils.rs  watchdog.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  FLASHING_SOLUTION.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MILESTONE_V0.1.md
examples/: advanced_features.rs
ossidata-core/: Cargo.toml
ossidata-core/src/: gpio.rs  lib.rs  prelude.rs
